Templates are now externally loaded.

--- a/src/app/profile/profile.pug
+++ b/src/app/profile/profile.pug
@@ -1,6 +1,6 @@
 include ../template/_mixins
 
-.row.row--fullheight(ng-controller="ProfileCtrl")
+.row.row--fullheight(ng-controller="ProfileCtrl as vm")
 
 	// sidebar (left)
 	.col-sm-3.col--menu
