--- a/src/app/releases/release.details.pug
+++ b/src/app/releases/release.details.pug
@@ -4,7 +4,7 @@ p.padder-top(ng-show="vm.pageLoading")
 	+icon('circle-o-notch').small.svg-spin.space-right.shift-up
 	| Loading...
 
-.row.ng-cloak.row--fullheight.fade-animation(ng-show="!pageLoading")
+.row.ng-cloak.row--fullheight.fade-animation(ng-show="!vm.pageLoading")
 
 	//-- RIGHT COLUMN
 	//-====================================================================
