--- a/src/app/releases/release.list.pug
+++ b/src/app/releases/release.list.pug
@@ -30,10 +30,10 @@ include ../template/_mixins
 		.clearfix.padder-bottom(ng-show="vm.releases.length > 0")
 
 		//- no releases
-		p(ng-show="!vm.releases.length && !vm.loading") No releases found.
+		p(ng-show="!vm.releases.length && !vm.pageLoading") No releases found.
 
 		//- loading
-		p(ng-show="vm.loading && !vm.error")
+		p(ng-show="vm.pageLoading && !vm.error")
 			+icon('circle-o-notch').small.svg-spin.space-right.shift-up
 			| Loading...
 
