--- a/src/app/modal/modal.error.info.pug
+++ b/src/app/modal/modal.error.info.pug
@@ -1,13 +1,13 @@
 include ../template/_mixins
 
-.theme-light(ng-controller="ModalCtrl as vm")
+.theme-light
 	.modal-header
 		h1.h--no-margin.h--small
 			+icon('{{ vm.data.icon }}').space-right
-			| &nbsp;{{ data.title }}
+			| &nbsp;{{ vm.data.title }}
 	.modal-body
-		h4 {{ data.subtitle }}
+		h4 {{ vm.data.subtitle }}
 		p(ng-bind-html="vm.data.message")
 
 	.modal-footer
-		button.btn.btn-default(ng-click="$close()") {{ data.close }}
+		button.btn.btn-default(ng-click="$close()") {{ vm.data.close }}
