Ported remaining components and deps from legacy code.

--- a/src/app/games/game.add.admin.pug
+++ b/src/app/games/game.add.admin.pug
@@ -1,6 +1,6 @@
 include ../template/_mixins
 
-.row.row--fullheight(ng-controller="GameAdminAddCtrl as vm")
+.row.row--fullheight(ng-controller="GameAddAdminCtrl as vm")
 	.col-sm-9.col--main
 		h1.h--primary add new game
 		hr
