--- a/src/app/releases/release.list.pug
+++ b/src/app/releases/release.list.pug
@@ -71,10 +71,10 @@ include ../template/_mixins
 								uib-tooltip="{{ release.starred ? 'Unstar' : 'Star' }} this release",
 									tooltip-placement="right",
 									tooltip-append-to-body="true",
-									ng-show="auth.hasPermission('releases/star')",
+									ng-show="vm.AuthService.hasPermission('releases/star')",
 									ng-class="{ 'a--primary': release.starred }"
 								)
-									+icon('star')(ng-click="vm.toggleReleaseStar(release, $event)").shift-up-2x
+									+icon('star')(ng-click="vm.ReleaseService.toggleReleaseStar(release, $event)").shift-up-2x
 								h1.h--small.h--no-margin {{ release.game.title }}
 								label.label--block {{ release.name }}
 								span.small.pull-right.space-right(am-time-ago="release.released_at")
@@ -93,7 +93,7 @@ include ../template/_mixins
 			input.form-control.input--search(ng-model="vm.q", type="text", placeholder="Search")
 
 		// starred only
-		span(ng-show="auth.isAuthenticated")
+		span(ng-show="vm.AuthService.isAuthenticated")
 			input#starredOnly.checkbox--toggle(type='checkbox', ng-model="vm.starredOnly")
 			label(for="starredOnly")
 			label.a.a--light.padder-bottom(for="starredOnly") Starred releases only
