--- a/src/app/users/user.list.admin.pug
+++ b/src/app/users/user.list.admin.pug
@@ -1,6 +1,6 @@
 include ../template/_mixins
 
-.row.row--fullheight(ng-controller="UserAdminListCtrl as vm")
+.row.row--fullheight(ng-controller="UserListAdminCtrl as vm")
 	.col-sm-3.col--menu
 		h1 Filter
 		hr
