--- a/src/app/builds/build.list.admin.pug
+++ b/src/app/builds/build.list.admin.pug
@@ -1,6 +1,6 @@
 include ../template/_mixins
 
-.row.row--fullheight(ng-controller="BuildAdminListCtrl as vm")
+.row.row--fullheight(ng-controller="BuildListAdminCtrl as vm")
 
 	.col-sm-9.col--main
 		h1.h--primary Builds
