--- a/src/app/releases/add-04-links.pug
+++ b/src/app/releases/add-04-links.pug
@@ -1,4 +1,4 @@
-.alert.alert--rounded.alert--aligned(ng-show="showHelp")
+.alert.alert--rounded.alert--aligned(ng-show="vm.showHelp")
 	+icon('info')
 	p You can add additional links to your release, such as to your WIP thread or other interesting resources. No need to add game-related links such as IPDB, that's already taken care of.
 .row.row--fullwidth.row--no-margin
