--- a/src/app/backglasses/backglass.add.pug
+++ b/src/app/backglasses/backglass.add.pug
@@ -125,6 +125,6 @@ include ../template/timepicker
 			br
 
 	.col-sm-3.col--menu
-		img.img--logo(ng-show="vm.game.logo.url", ng-src="{{ vm.game.logo.variations[vm.App.pixelSuffix('medium')].url }}")
+		img.img--logo(ng-show="vm.game.logo.url", ng-src="{{ vm.App.img(vm.game.logo, 'medium') }}")
 		h3.h--multiline.text-center {{ vm.game.title }}
 		.text-center {{ vm.game.manufacturer }} · {{ vm.game.year }}
