--- a/src/app/games/details-02-release.pug
+++ b/src/app/games/details-02-release.pug
@@ -57,7 +57,7 @@ p(ng-show="!vm.hasReleases && vm.game.restrictions.release.mpu && vm.game.restri
 			.col-xs-6.col-sm-12.col-md-6(ng-repeat="flavor in rlsVm.flavorGrid")
 				.media
 					.media-left.media-top
-						img.img-avatar--sm(ng-src="{{ flavor.file.playfield_image.variations['square' + pixelDensitySuffix].url }}")
+						img.img-avatar--sm(ng-src="{{ vm.App.img(flavor.file.playfield_image, 'square') }}")
 					.media-body
 						span {{ flavor.short }}
 						br
