--- a/src/app/games/game.select.modal.pug
+++ b/src/app/games/game.select.modal.pug
@@ -32,7 +32,7 @@ include ../template/_mixins
 
 		div.media.media--game-item
 			.media-left
-				.img.img--ar-bg(img-bg="match.model.backglass.variations[vm.App.pixelSuffix('small')].url")
+				.img.img--ar-bg(img-bg="vm.App.img(match.model.backglass, 'small')")
 			.media-body
 				h3.h--no-margin.h--lighter {{ match.model.title }}
 
