--- a/src/app/releases/release.add.pug
+++ b/src/app/releases/release.add.pug
@@ -110,7 +110,7 @@ include ../template/_mixins
 		p &nbsp;
 
 	.col-sm-3.col--menu
-		img.img--logo(ng-show="vm.game.logo.url", ng-src="{{ vm.game.logo.variations[vm.App.pixelSuffix('medium')].url }}")
+		img.img--logo(ng-show="vm.game.logo.url", ng-src="{{ vm.App.img(vm.game.logo, 'medium') }}")
 		h3.h--multiline.text-center {{ vm.game.title }}
 		.text-center {{ vm.game.manufacturer }} · {{ vm.game.year }}
 
