--- a/src/app/releases/release.add.version.pug
+++ b/src/app/releases/release.add.version.pug
@@ -1,40 +1,40 @@
 include ../template/_mixins
 
-.row.row--fullheight(ng-controller="ReleaseAddVersionCtrl")
+.row.row--fullheight(ng-controller="ReleaseAddVersionCtrl as vm")
 	.col-sm-9.col--main
 		h1.h--primary Upload new files
 		hr.hr--primary
 
-		.alert.alert--rounded.alert--aligned.padder-bottom(ng-show="showHelp")
+		.alert.alert--rounded.alert--aligned.padder-bottom(ng-show="vm.showHelp")
 			+icon('info')
 			p Here you can either upload additional flavors for an existing version or upload a new version of you release.
 
 		.row: .col-sm-10.col-sm-offset-1
-			select.form-control.pull-right(ng-disabled="meta.mode == 'newVersion'", ng-options="version for version in versions", ng-model="meta.version")
+			select.form-control.pull-right(ng-disabled="vm.meta.mode == 'newVersion'", ng-options="version for version in vm.versions", ng-model="vm.meta.version")
 			.radio--lg: label
-				input.input-lg(type="radio", name="mode", value="newFile", ng-model="meta.mode")
+				input.input-lg(type="radio", name="mode", value="newFile", ng-model="vm.meta.mode")
 				span.aligned: h1 Existing version
 
-			input.form-control.width-md.pull-right(type="text", ng-disabled="meta.mode == 'newFile'", ng-model="releaseVersion.version", placeholder="x.x.x")
+			input.form-control.width-md.pull-right(type="text", ng-disabled="vm.meta.mode == 'newFile'", ng-model="releaseVersion.version", placeholder="x.x.x")
 			.radio--lg: label
-				input(type="radio", name="mode", value="newVersion", ng-model="meta.mode")
+				input(type="radio", name="mode", value="newVersion", ng-model="vm.meta.mode")
 				span.aligned: h1 New version
-		.row.padder-bottom(ng-show="errors.versions[0].version"): .col-sm-12
+		.row.padder-bottom(ng-show="vm.errors.versions[0].version"): .col-sm-12
 			.alert.alert-danger
 				+icon('warning').shift-up.space-right
-				| {{ errors.versions[0].version }}
+				| {{ vm.errors.versions[0].version }}
 
 		.row: .col-sm-10.col-sm-offset-1
-			.form-group(ng-show="meta.mode == 'newVersion'")
+			.form-group(ng-show="vm.meta.mode == 'newVersion'")
 				label.control-label Release Information
 				editor.tabset--light(ng-model="releaseVersion.changes", placeholder="Release Information", markdown-text="Markdown enabled. This will show up in the release's change log.")
 
 		.row: .col-sm-10.col-sm-offset-1
-			.form-group(ng-show="meta.mode == 'newVersion'")
+			.form-group(ng-show="vm.meta.mode == 'newVersion'")
 				label.control-label Release Date
 				.row
 					.col-sm-4: .input-group
-						input.form-control.datepicker(type='text', ng-model='meta.releaseDate', ng-required='true',
+						input.form-control.datepicker(type='text', ng-model='vm.meta.releaseDate', ng-required='true',
 						uib-datepicker-popup="yyyy-MM-dd",
 						is-open="calendarOpened",
 						close-text="Close",
@@ -42,7 +42,7 @@ include ../template/_mixins
 						starting-day="1")
 						span.input-group-addon: +icon('calendar').a(ng-click='openCalendar($event)')
 					.col-sm-3
-						uib-timepicker(ng-model="meta.releaseTime", hour-step="1", minute-step="5", show-meridian="ismeridian")
+						uib-timepicker(ng-model="vm.meta.releaseTime", hour-step="1", minute-step="5", show-meridian="ismeridian")
 					.col-sm-5
 						i Leave empty for submission time.
 
@@ -74,21 +74,21 @@ include ../template/_mixins
 		//------------------------- FINISH LINE -------------------------------
 		//---------------------------------------------------------------------
 		hr
-		.alert.alert-danger.alert--inverted.padder-bottom(ng-show="errors && errors.__count")
+		.alert.alert-danger.alert--inverted.padder-bottom(ng-show="vm.errors && vm.errors.__count")
 			+icon('warning').shift-up.space-right
 			| There were errors while submitting your release. Please scroll up and fix the marked fields.
 		a.btn.btn-hollow.btn-lg.space-right(ui-sref="releaseDetails({ id: game.id, releaseId: release.id })") Cancel
-		button.btn.btn-default.btn-lg(ng-click="reset()") Reset
-		button.btn.btn-primary.btn-lg.pull-right(ng-click="submit()", ng-disabled="submitting") Submit
+		button.btn.btn-default.btn-lg(ng-click="vm.reset()") Reset
+		button.btn.btn-primary.btn-lg.pull-right(ng-click="vm.submit()", ng-disabled="vm.submitting") Submit
 		.clearfix
 		p &nbsp;
 	.col-sm-3.col--menu
-		img.img--logo(ng-show="game.logo.url", ng-src="{{ game.logo.variations['medium' + pixelDensitySuffix].url }}")
-		h3.h--multiline.text-center {{ game.title }}
-		.text-center {{ release.name }}
+		img.img--logo(ng-show="vm.game.logo.url", ng-src="{{ vm.App.img(vm.game.logo.variations, 'medium') }}")
+		h3.h--multiline.text-center {{ vm.game.title }}
+		.text-center {{ vm.release.name }}
 
 		hr
-		input#showHelp.checkbox--toggle(type='checkbox', ng-model="showHelp")
+		input#showHelp.checkbox--toggle(type='checkbox', ng-model="vm.showHelp")
 		label(for="showHelp")
 		label.a.a--light.padder-bottom(for="showHelp") Show Instructions
 		.clearfix
