--- a/src/app/releases/release.download.modal.pug
+++ b/src/app/releases/release.download.modal.pug
@@ -16,8 +16,8 @@ include ../template/_mixins
 					img.img.img-responsive.img--rounded-more(img-src="{{ file.playfield_image.variations['square-2x'].url }}")
 					.text-center.padder-top
 						label.label--block
-							strong {{ flavors.orientation.values[file.flavor.orientation].name }},
-							| &nbsp;{{ flavors.lighting.values[file.flavor.lighting].name }}
+							strong {{ vm.Flavors.orientation.values[file.flavor.orientation].name }},
+							| &nbsp;{{ vm.Flavors.lighting.values[file.flavor.lighting].name }}
 						label.label--block
 							span(ng-repeat="compat in file.compatibility") {{ compat.label }}
 
@@ -48,7 +48,7 @@ include ../template/_mixins
 		.row(ng-show="vm.game.backglasses.length > 0").padder-bottom-2x
 			.col-sm-3(ng-repeat="backglass in vm.game.backglasses")
 				.flavor-item(ng-class="{ active: downloadRequest.backglass === backglass.id }", ng-click="vm.selectBackglass(backglass)")
-					img.img.img-responsive.img--rounded-more(img-src="{{ backglass.versions[0].file.variations[vm.App.pixelSuffix('medium')].url }}")
+					img.img.img-responsive.img--rounded-more(img-src="{{ vm.App.img(backglass.versions[0].file, 'medium') }}")
 					.text-center.padder-top
 						label.label--block
 							strong v{{ backglass.versions[0].version }}
