--- a/src/app/releases/release.list.pug
+++ b/src/app/releases/release.list.pug
@@ -77,7 +77,7 @@ include ../template/_mixins
 									+icon('star')(ng-click="vm.ReleaseService.toggleReleaseStar(release, $event)").shift-up-2x
 								h1.h--small.h--no-margin {{ release.game.title }}
 								label.label--block {{ release.name }}
-								span.small.pull-right.space-right(am-time-ago="release.released_at")
+								span.small.pull-right.space-right {{ release.released_at | timeAgo }}
 								div.small.oneliner by {{ release.authors[0].user.name }}
 							.clearfix
 
